--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,13 @@ jobs:
   build-macos-intel:
     name: 🍎 Build macOS (Intel)
     runs-on: macos-13
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
@@ -38,7 +35,6 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build macOS .app (Intel)
         run: |
           mkdir -p hooks
@@ -84,6 +80,7 @@ jobs:
       - name: ☁️ Upload to S3
         run: |
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          echo "macos/intel/$TIMESTAMP" > s3-macos-intel.txt
           S3_PATH="s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/intel/${TIMESTAMP}"
           aws s3 cp "dist-macos-intel/${{ env.APP_NAME }}-macOS-Intel.zip" "${S3_PATH}/"
 
@@ -91,16 +88,13 @@ jobs:
   build-macos-arm:
     name: 🍎 Build macOS (Apple Silicon)
     runs-on: macos-latest
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
@@ -108,7 +102,6 @@ jobs:
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build macOS .app (ARM)
         run: |
           mkdir -p hooks
@@ -154,154 +147,115 @@ jobs:
       - name: ☁️ Upload to S3
         run: |
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          echo "macos/arm/$TIMESTAMP" > s3-macos-arm.txt
           S3_PATH="s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/arm/${TIMESTAMP}"
           aws s3 cp "dist-macos-arm/${{ env.APP_NAME }}-macOS-AppleSilicon.zip" "${S3_PATH}/"
 
-  # ==================== Linux Ubuntu 22.04 BUILD ====================
+  # ==================== Linux 22.04 BUILD ====================
   build-linux-22:
-    name: 🐧 Build Linux (Ubuntu 22.04)
+    name: 🐧 Build Linux Ubuntu 22.04
     runs-on: ubuntu-22.04
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            python3-dev libsdl2-dev libsdl2-image-dev \
-            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
-            libswscale-dev libavformat-dev libavcodec-dev \
-            zlib1g-dev fuse libfuse2 imagemagick
-
+          sudo apt-get install -y python3-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev fuse libfuse2 imagemagick
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build Linux Binary
         run: |
-          pyinstaller \
-            --onefile \
-            --windowed \
-            --icon=wildace.jpeg \
-            --add-data="bee.png:." \
-            --name=${{ env.APP_NAME }} \
-            main.py
-
+          pyinstaller --onefile --windowed --icon=wildace.jpeg --add-data="bee.png:." --name=${{ env.APP_NAME }} main.py
           mkdir -p dist-linux-22
           chmod +x dist/${{ env.APP_NAME }}
           mv dist/${{ env.APP_NAME }} dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
-
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-22-build
           path: dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         run: |
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          echo "linux/ubuntu-22.04/$TIMESTAMP" > s3-linux-22.txt
           S3_PATH="s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-22.04/${TIMESTAMP}"
           aws s3 cp "dist-linux-22/${{ env.APP_NAME }}-ubuntu22.04" "${S3_PATH}/"
 
-  # ==================== Linux Ubuntu 24.04 BUILD ====================
+  # ==================== Linux 24.04 BUILD ====================
   build-linux-24:
-    name: 🐧 Build Linux (Ubuntu 24.04)
+    name: 🐧 Build Linux Ubuntu 24.04
     runs-on: ubuntu-24.04
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: 📦 Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            python3-dev libsdl2-dev libsdl2-image-dev \
-            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev \
-            libswscale-dev libavformat-dev libavcodec-dev \
-            zlib1g-dev libfuse2t64 imagemagick
-
+          sudo apt-get install -y python3-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev libfuse2t64 imagemagick
       - name: 📦 Install Python deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install "kivy[base]==2.3.0"
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: 🔨 Build Linux Binary
         run: |
-          pyinstaller \
-            --onefile \
-            --windowed \
-            --icon=wildace.jpeg \
-            --add-data="bee.png:." \
-            --name=${{ env.APP_NAME }} \
-            main.py
-
+          pyinstaller --onefile --windowed --icon=wildace.jpeg --add-data="bee.png:." --name=${{ env.APP_NAME }} main.py
           mkdir -p dist-linux-24
           chmod +x dist/${{ env.APP_NAME }}
           mv dist/${{ env.APP_NAME }} dist-linux-24/${{ env.APP_NAME }}-ubuntu24.04
-
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-24-build
           path: dist-linux-24/${{ env.APP_NAME }}-ubuntu24.04
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload to S3
         run: |
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          echo "linux/ubuntu-24/$TIMESTAMP" > s3-linux-24.txt
           S3_PATH="s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-24.04/${TIMESTAMP}"
           aws s3 cp "dist-linux-24/${{ env.APP_NAME }}-ubuntu24.04" "${S3_PATH}/"
 
   # ==================== Windows BUILD ====================
   build-windows:
-    name: 🪟 Windows Build
+    name: 🪟 Build Windows
     runs-on: windows-latest
-
     env:
       KIVY_GL_BACKEND: angle_sdl2
       KIVY_WINDOW: sdl2
       KIVY_NO_ARGS: "1"
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install dependencies
         run: |
           python -m venv venv
@@ -309,7 +263,6 @@ jobs:
           pip install --upgrade pip wheel setuptools
           pip install -r requirements.txt
           pip install pyinstaller
-
       - name: Create Kivy config to prevent GL initialization
         run: |
           New-Item -ItemType Directory -Force -Path "$env:USERPROFILE\.kivy"
@@ -325,38 +278,72 @@ jobs:
           
           [modules]
           "@ | Out-File -FilePath "$env:USERPROFILE\.kivy\config.ini" -Encoding ASCII
-
       - name: Build EXE with PyInstaller
         run: |
           .\venv\Scripts\Activate.ps1
           pyinstaller --windowed --onedir --name="${{ env.APP_NAME }}" --add-data "bee.png;." --icon wildace.jpeg main.py --noconfirm --clean
-
-      - name: List dist directory
-        run: |
-          Write-Host "Listing dist directory:"
-          Get-ChildItem -Path dist -Recurse
-
       - name: 📦 Create ZIP archive
         run: |
           $AppFolder = "dist\${{ env.APP_NAME }}"
           $ZipFile = "dist\${{ env.APP_NAME }}-Windows.zip"
           Compress-Archive -Path $AppFolder -DestinationPath $ZipFile
-
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
           path: dist/${{ env.APP_NAME }}-Windows.zip
-
       - name: 🔐 Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: ☁️ Upload ZIP to S3
         run: |
           $TIMESTAMP = Get-Date -Format "yyyyMMdd-HHmmss"
+          echo "windows/$TIMESTAMP" > s3-windows.txt
           $S3_PATH = "s3://${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/windows/${TIMESTAMP}/"
           aws s3 cp "dist/${{ env.APP_NAME }}-Windows.zip" $S3_PATH
+
+  # ==================== Notification Email ====================
+  notify:
+    name: 📧 Send Build Notification Email
+    needs:
+      - build-macos-intel
+      - build-macos-arm
+      - build-linux-22
+      - build-linux-24
+      - build-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📅 Generate Timestamp
+        id: stamp
+        run: echo "ts=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
+      - name: 📧 Send Email Notification
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: ${{ secrets.SES_HOST }}
+          server_port: ${{ secrets.SES_PORT }}
+          username: ${{ secrets.SES_USER }}
+          password: ${{ secrets.SES_PASS }}
+          secure: true
+          from: "${{ secrets.SES_FROM_EMAIL }}"
+          to: |
+            monika@wildace.in,
+            tester1@company.com,
+            client@company.com
+          subject: "🚀 New Build Uploaded - Beetek Shoe Monitor"
+          content_type: text/html
+          body: |
+            <h2>🚀 Beetek Shoe Monitor - New Build Ready</h2>
+            <p>The latest build has been successfully uploaded to S3.</p>
+            <h3>📦 Download Links</h3>
+            <ul>
+              <li>macOS Intel:<br>https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/intel/${{ steps.stamp.outputs.ts }}/${{ env.APP_NAME }}-macOS-Intel.zip</li>
+              <li>macOS ARM:<br>https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/macos/arm/${{ steps.stamp.outputs.ts }}/${{ env.APP_NAME }}-macOS-AppleSilicon.zip</li>
+              <li>Ubuntu 22.04:<br>https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-22.04/${{ steps.stamp.outputs.ts }}/${{ env.APP_NAME }}-ubuntu22.04</li>
+              <li>Ubuntu 24.04:<br>https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/linux/ubuntu-24.04/${{ steps.stamp.outputs.ts }}/${{ env.APP_NAME }}-ubuntu24.04</li>
+              <li>Windows:<br>https://s3.ap-south-1.amazonaws.com/${{ env.S3_BUCKET }}/${{ env.S3_BASE_PATH }}/windows/${{ steps.stamp.outputs.ts }}/${{ env.APP_NAME }}-Windows.zip</li>
+            </ul>
+            <p>⏱ Timestamp: <b>${{ steps.stamp.outputs.ts }}</b></p>
+            <p>Regards,<br><b>CI/CD Pipeline</b></p>
